--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,213 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Пинк</title>
   </head>
-  <body>
+  <body class="page__body">
+    <header class="header">
+      <div class="header__wrapper">
+        <a class="header__logo logo">
+          <img class="logo__image" src="img/logo-header.svg" width="74" height="23" alt="Логотип приложения Pink">
+        </a>
+        <nav class="main-nav">
+          <button class="main-nav__toggle" type="button">
+            <span class="visually-hidden">Открыть меню</span>
+          </button>
+          <div class="main-nav__wrapper">
+            <ul class="main-nav__list">
+              <li class="main-nav__item main-nav__item--active">
+                <a>
+                  Главная
+                </a>
+              </li>
+              <li class="main-nav__item">
+                <a href="photo.html">
+                  Фотографии
+                </a>
+              </li>
+              <li class="main-nav__item">
+                <a href="form.html">
+                  Конкурс
+                </a>
+              </li>
+              <li class="main-nav__item">
+                <a href="https://htmlacademy.ru/intensive/adaptive">
+                  HTML Academy
+                </a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </header>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS. Адаптивная вёрстка и автоматизация</a>».</p>
+    <main class="main">
+      <h1 class="visually-hidden">Pink - мобильное приложение для раскрашивания серых будней в розовый цвет</h1>
+
+      <section class="promo">
+        <div class="promo__wrapper">
+          <h2 class="main__title">Взгляните на жизнь иначе!</h2>
+          <img src="img/app-image.png" alt="Изображение приложения в розовом цвете">
+          <a class="promo__button" href="#">Скачать приложение</a>
+          <ul class="promo__list download">
+            <li class="download__item">
+              <a class="download__link download__link-app-store" href="#">
+                Скачать в App Store
+              </a>
+            </li>
+            <li class="download__item">
+              <a class="download__link download__link--google-play" href="#">
+                Скачать в Google Play
+              </a>
+            </li>
+            <li class="download__item">
+              <a class="download__link download__link--microsoft-store" href="#">
+                Скачать в Microsoft Store
+              </a>
+            </li>
+          </ul>
+          <p class="promo__text">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+        </div>
+      </section>
+
+      <section class="advantages">
+        <div class="advantages__wrapper">
+          <h2 class="visually-hidden">Преимущества приложения Pink</h2>
+          <p class="advantages__title main__title">Устали от серости мегаполиса?</p>
+          <p class="main__title">Нам есть, что вам предложить!</p>
+          <ul class="advantages__list">
+            <li class="advantages__item">
+              <h3 class="advantages__name">Поднимает настроение</h3>
+              <p class="advantages__text">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
+            </li>
+            <li class="advantages__item">
+              <h3 class="advantages__name">Меняет мир вокруг</h3>
+              <p class="advantages__text">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
+            </li>
+            <li class="advantages__item">
+              <h3 class="advantages__name">Заводит новых друзей</h3>
+              <p class="advantages__text">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
+            </li>
+          </ul>
+          <img src="img/app-smile.png" alt="Изображение приложения в розовом цвете со смайликом и текстовой подписью">
+        </div>
+      </section>
+
+      <section class="research">
+        <div class="research__wrapper">
+          <h2 class="visually-hidden">Данные исследований</h2>
+          <p class="research__title">Эффект на 24 часа!</p>
+          <p class="research__text">Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!</p>
+          <p class="research__link">Узнать больше об исследовании</p>
+        </div>
+      </section>
+
+      <section class="reviews">
+        <div class="reviews__wrapper">
+          <h2 class="visually-hidden">Отзывы о приложении</h2>
+          <div class="reviews__list">
+            <blockquote class="reviews__item">
+              <p class="reviews__author-name">Николай Петров</p>
+              <p class="reviews__author-info">25 лет, водитель трамвая</p>
+              <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+            </blockquote>
+            <button class="reviews__prev" type="button">Предыдущий отзыв</button>
+            <button class="reviews__next" type="button">Следующий отзыв</button>
+          </div>
+          <p class="reviews__toggles">
+            <button class="reviews__toggle reviews__toggle--current" type="button">1</button>
+            <button class="reviews__toggle" type="button">2</button>
+            <button class="reviews__toggle" type="button">3</button>
+          </p>
+        </div>
+      </section>
+
+      <section class="tariffs">
+        <div class="tariffs__wrapper">
+          <h2 class="visually-hidden">Описание тарифов</h2>
+          <table class="tariffs__table">
+            <tr class="tariffs__header">
+              <th><span class="visually-hidden">Название и цена тарифа</span></th>
+              <th class="tariffs__name">База<br>1,99 USD</th>
+              <th class="tariffs__name">Стандарт<br>3,99 USD</th>
+              <th class="tariffs__name">Анлим<br>9,99 USD</th>
+            </tr>
+            <tr>
+              <td class="tariffs__feature">Розовый фильтр</td>
+              <td class="tariffs__feature-yes"><span class="visually-hidden">Розовый фильтр - есть</span></td>
+              <td class="tariffs__feature-yes"><span class="visually-hidden">Розовый фильтр - есть</span></td>
+              <td class="tariffs__feature-yes"><span class="visually-hidden">Розовый фильтр - есть</span></td>
+            </tr>
+            <tr>
+              <td class="tariffs__feature">Смайлики</td>
+              <td class="tariffs__feature-no"><span class="visually-hidden">Смайлики - нет</span></td>
+              <td class="tariffs__feature-yes"><span class="visually-hidden">Смайлики - есть</span></td>
+              <td class="tariffs__feature-yes"><span class="visually-hidden">Смайлики - есть</span></td>
+            </tr>
+            <tr>
+              <td class="tariffs__feature">Комментарии</td>
+              <td class="tariffs__feature-no"><span class="visually-hidden">Комментарии - нет</span></td>
+              <td class="tariffs__feature-no"><span class="visually-hidden">Комментарии - нет</span></td>
+              <td class="tariffs__feature-yes"><span class="visually-hidden">Комментарии - есть</span></td>
+            </tr>
+          </table>
+        </div>
+      </section>
+
+      <section class="contacts">
+        <div class="contacts__wrapper">
+          <h2 class="contacts__title main__title">Остались вопросы? Свяжитесь с нами!</h2>
+          <ul class="contacts__list">
+            <li class="contacts__item">
+              <h3 class="contacts__title">Звоните:</h3>
+              <p class="contacts__text">
+                <a class="contacts__phone" href="tel:+78125556666">+7 (812) 555-66-66</a>
+              </p>
+            </li>
+            <li class="contacts__item">
+              <h3 class="contacts__title">Пишите:</h3>
+              <p class="contacts__text">
+                <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+              </p>
+            </li>
+            <li class="contacts__item">
+              <h3 class="contacts__title">Приезжайте в гости:</h3>
+              <p class="contacts__text">ул. Большая Конюшенная, 19/8</p>
+            </li>
+          </ul>
+          <div class="contacts__map">
+            <iframe class="contacts__iframe" src="https://yandex.ru/map-widget/v1/?um=constructor%3A6675e7cd2b89498ac571e3ab4d4677a915fdfeffda66d193f321a90674681e2b&amp;source=constructor" style="width: 100%; height: 415px;" title="Адрес компании по адресу г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8"></iframe>
+          </div>
+        </div>
+      </section>
+
+      <footer class="footer">
+        <div class="footer__wrapper">
+          <a class="footer__logo logo">
+            <img class="logo__image" src="img/logo-footer.svg" width="74" height="23" alt="Логотип приложения Pink">
+          </a>
+          <div class="footer__social social">
+            <ul class="social__list">
+              <li class="social__item">
+                <a class="social__link social__link--twitter" href="#">Мы в Твиттере</a>
+              </li>
+              <li class="social__item">
+                <a class="social__link social__link--facebook" href="#">Мы в Фейсбуке</a>
+              </li>
+              <li class="social__item">
+                <a class="social__link social__link--youtube" href="#">Мы на Ютьюб</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__copyright copyright">
+            <p class="copyright__text">Разработано:</p>
+            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+          </div>
+        </div>
+      </footer>
+
+    </main>
 
   </body>
 </html>
