--- a/source/form.html
+++ b/source/form.html
@@ -179,6 +179,22 @@
         </div>
       </footer>
 
+      <!-- окно ошибки
+      <section class="modal-form modal-form--error">
+        <h2 class="modal-form__title">Что-то пошло не так!</h2>
+        <p class="modal-form__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+        <button class="modal-form__button button" type="button">Ок</button>
+      </section>
+      -->
+
+      <!-- окно успешной отправки формы
+      <section class="modal-form modal-form--success">
+        <h2 class="modal-form__title">Ваша заявка отправлена</h2>
+        <p class="modal-form__text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
+        <button class="modal-form__button button" type="button">Закрыть окно</button>
+      </section>
+      -->
+
     </main>
 
   </body>
