Стилизация всех страниц

--- a/source/form.html
+++ b/source/form.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Пинк</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page__body">
     <header class="header">
@@ -17,22 +19,22 @@
           <div class="main-nav__wrapper">
             <ul class="main-nav__list">
               <li class="main-nav__item">
-                <a href="index.html">
+                <a class="main-nav__link" href="index.html">
                   Главная
                 </a>
               </li>
               <li class="main-nav__item">
-                <a href="photo.html">
+                <a class="main-nav__link" href="photo.html">
                   Фотографии
                 </a>
               </li>
               <li class="main-nav__item main-nav__item--active">
-                <a>
+                <a class="main-nav__link">
                   Конкурс
                 </a>
               </li>
               <li class="main-nav__item">
-                <a href="https://htmlacademy.ru/intensive/adaptive">
+                <a class="main-nav__link" href="https://htmlacademy.ru/intensive/adaptive">
                   HTML Academy
                 </a>
               </li>
@@ -43,7 +45,11 @@
     </header>
 
     <main class="main">
-      <h1 class="main__title">Конкурс на самое безбашенное путешествие с Пинк</h1>
+      <div class="promo">
+        <div class="promo__block promo-block--inner">
+          <h1 class="main__title">Конкурс на самое безбашенное путешествие с Пинк</h1>
+        </div>
+      </div>
       <p class="text-intro">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!</p>
 
       <section class="form-section">
@@ -72,7 +78,7 @@
 
           <div class="form__block achievement">
             <fieldset class="achievement__wrapper">
-              <legend class="achievement__legend">Ваши безбашенные достижения в путешествии</legend>
+              <legend class="form__legend achievement__legend">Ваши безбашенные достижения в путешествии</legend>
               <ul class="achievement__list">
                 <li class="achievement__item">
                   <input class="achievement__input" type="checkbox" name="selfie" id="selfie" checked>
@@ -120,7 +126,7 @@
 
           <div class="form__block apps">
             <fieldset class="apps__wrapper">
-              <legend class="apps__legend">С каким приложением путешествовали?</legend>
+              <legend class="form__legend apps__legend">С каким приложением путешествовали?</legend>
               <ul class="apps__list">
                 <li class="apps__item">
                   <input class="apps__input" type="radio" name="app" id="ios" checked>
@@ -140,8 +146,8 @@
 
           <div class="form__block emotions">
             <fieldset class="emotions__wrapper">
-              <legend class="emotions__legend">Ваш отзыв</legend>
-              <label class="visually-hidden" for="comment">Опишите свои эмоции?</label>
+              <legend class="visually-hidden">Ваш отзыв</legend>
+              <label class="form__legend emotions__legend" for="comment">Опишите свои эмоции?</label>
               <textarea class="emotions__input" name="comment" id="comment" cols="25" rows="7" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
             </fieldset>
           </div>
@@ -157,7 +163,7 @@
       <footer class="footer">
         <div class="footer__wrapper">
           <a class="footer__logo logo">
-            <img class="logo__image" src="img/logo-footer.svg" width="74" height="23" alt="Логотип приложения Pink">
+            <img class="logo__image" src="img/logo-footer.svg" width="145" height="40" alt="Логотип приложения Pink">
           </a>
           <div class="footer__social social">
             <ul class="social__list">
